--- a/css/main.css
+++ b/css/main.css
@@ -1,7 +1,14 @@
 body {
   margin: 60px auto;
   width: 70%;
+  font-size: 16px;
 }
-body, input {
+body, button, input {
   font-family: 'roboto mono', 'monospaced';
+}
+h1 {
+  font-size: 250%;
+}
+p, button, input {
+  font-size: 120%;
 }
